# gen/operator/oas_handlers_gen.go
@@ -620,7 +620,7 @@ func (s *Server) handleOperatorMeGetRequest(args [0]string, argsEscaped bool, w 
 
 // handleOperatorWorkspacesGetRequest handles OperatorWorkspaces_get operation.
 //
-// One Workspace's metadata and suspension state.
+// One Workspace's metadata, suspension state, rates and send volume.
 //
 // GET /workspaces/{workspaceId}
 func (s *Server) handleOperatorWorkspacesGetRequest(args [1]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
