# gen/operator/oas_response_decoders_gen.go
@@ -741,7 +741,7 @@ func decodeOperatorWorkspacesGetResponse(resp *http.Response) (res OperatorWorks
 			}
 			d := jx.DecodeBytes(buf)
 
-			var response OperatorWorkspaceResource
+			var response OperatorWorkspaceDetailResource
 			if err := func() error {
 				if err := response.Decode(d); err != nil {
 					return err
