# gen/operator/oas_response_encoders_gen.go
@@ -277,7 +277,7 @@ func encodeOperatorMeGetResponse(response OperatorMeGetRes, w http.ResponseWrite
 
 func encodeOperatorWorkspacesGetResponse(response OperatorWorkspacesGetRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
-	case *OperatorWorkspaceResource:
+	case *OperatorWorkspaceDetailResource:
 		w.Header().Set("Content-Type", "application/json; charset=utf-8")
 		w.WriteHeader(200)
 
